Fixed two minor code smells